--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   get: ^3.24.0
   get_storage: ^1.4.0
   dio: ^3.0.10
+  google_fonts: ^1.1.1
+  flutter_config: ^1.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
